infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: traefik
  rules:
    - host: hostname.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nextjs-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: strapi-srv
                port:
                  number: 1337
    - host: admin.hostname.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: strapi-srv
                port:
                  number: 1337
